# atlas-agents

./: .gitignore  README.md  package-lock.json  package.json
examples/agents-of-empires/: index.html  package.json
examples/agents-of-empires/src/: App.tsx  agents.ts
examples/basic-chat/: index.html  package.json
examples/basic-chat/src/: App.tsx
servers/speech-local/: .gitignore  pyproject.toml
servers/speech-local/speech_server/: config.py  main.py  stt_engine.py  tts_engine.py
