[project]
name = "atlas-speech-server"
version = "0.1.0"
description = "Local GPU-accelerated speech server (Kokoro TTS + Faster-Whisper STT)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "kokoro>=0.9.2",
    "soundfile>=0.13.0",
    "faster-whisper>=1.1.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.7.0",
]

[project.scripts]
atlas-speech = "speech_server.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
